fixed margins and hidden scrollbar

--- a/src/components/post.css
+++ b/src/components/post.css
@@ -26,3 +26,6 @@
     font-size: 12px;
 
 }
+.posts{
+    margin-right: 0px!important;
+}
